maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: expected class or object definition
def keepHandOnSideWall(): Int={
^Escaper:38: error: Unmatched closing brace '}' ignored here
    }
    ^Escaper:60: error: Unmatched closing brace '}' ignored here
}
^